# device-metrics-exporter-glog-fork

./: .gitignore  .gitmodules  .readthedocs.yaml  .wordlist.txt  Makefile  Makefile.build  Makefile.compile  Makefile.package  README.md  RELEASE.md  go.mod  go.sum  index.yaml
.github/: CODEOWNERS  dependabot.yml
assets/: version.yaml
assets/amd_smi_lib/: version.txt
assets/profiler_lib/: version.txt
assets/rocprofiler/: rocpctl
assets/rocprofiler-sdk/: counter_defs.yaml
charts/: device-metrics-exporter-charts-v1.0.0.tgz  device-metrics-exporter-charts-v1.1.0.tgz  device-metrics-exporter-charts-v1.2.0.tgz  device-metrics-exporter-charts-v1.2.1.tgz  device-metrics-exporter-charts-v1.3.0.tgz  device-metrics-exporter-charts-v1.3.1.tgz
cmd/exporter/: main.go
cmd/testrunner/: main.go
debian/DEBIAN/: control  prerm
docker/: Dockerfile.azure.linux3.exporter-release  Dockerfile.exporter-release  Makefile  build_post_docker.sh  build_prep_docker.sh  entrypoint.sh
docker/rhelrepofiles/: amdgpu.repo  rocm.repo
docker/testrunner/: Dockerfile  Dockerfile.internal  Makefile
docs/: .markdownlint.yaml  conf.py  developerguide.md  index.md  projects.yaml  releasenotes.md  requirements.in  requirements.txt
docs/configuration/: agfhc.md  configmap.md  configuration-settings.md  docker.md  metricslist.md  troubleshooting.md
docs/installation/: deb-package.rst  docker.md  gpu-operator.md  kubernetes-helm.md  singularity.md
docs/integrations/: prometheus-grafana.md  prometheus-servicemonitor.md  slurm-integration.md
docs/sphinx/: _toc.yml  _toc.yml.in  requirements.in  requirements.txt
example/: config.json  configmap.yaml  prometheus.yml  rdc.service
example/helm/: values-with-servicemonitor.yaml
example/slurm/: exporter-epilog.sh  exporter-prolog.sh
example/testrunner/: manual_test_job.yaml  pre_start_job_check.yaml  schedule_test_cronjob.yaml
grafana/: dashboard_gpu.json  dashboard_job.json  dashboard_node.json  dashboard_overview.json
helm-charts/: Chart.yaml  README.md  config.json  values.yaml
helm-charts/templates/: _helpers.tpl  configmap.yaml  daemonsets.yaml  metrics-exporter-rbac.yaml  metrics-exporter-service.yaml  servicemonitor.yaml
internal/: README.md  metricsmap.md
internal/amdgpu/config/: config.go
internal/amdgpu/gpuagent/: gpuagent.go  gpuagent_metrics.go  init_test.go  worker.go
internal/amdgpu/logger/: logger.go
internal/amdgpu/metricsutil/: metrics.go
internal/amdgpu/mock/: Makefile
internal/amdgpu/mock_gen/: mock_gpu.go
internal/amdgpu/proto/: Makefile  exporterconfig.proto  gpu.proto
internal/k8s/: k8s.go
internal/slurm/: slurm.go
internal/slurm/sim/: sim.go
pkg/amdgpu/config/: config.go  config_handler.go
pkg/amdgpu/exporter/: exporter.go
pkg/amdgpu/fsysdevice/: device.go
pkg/amdgpu/globals/: constants.go  testrunner.go
pkg/amdgpu/gpuagent/: gpuagent.go  gpuagent_health.go  gpuagent_metrics.go  gpuagent_test.go  init_test.go  worker.go
pkg/amdgpu/logger/: logger.go
pkg/amdgpu/metricsutil/: metrics.go
pkg/amdgpu/mock/: Makefile
pkg/amdgpu/mock_gen/: mock_events.go  mock_gpu.go
pkg/amdgpu/proto/: Makefile  events.proto  exporterconfig.proto  gpu.proto  luaplugin.proto  metricssvc.proto  rocprofiler.proto  testsvc.proto  types.proto
pkg/amdgpu/rocprofiler/: rocpclient.go
pkg/amdgpu/scheduler/: k8s.go  scheduler.go  slurm.go
pkg/amdgpu/svc/: metrics_svc.go  svc_handler.go  test_svc.go
pkg/amdgpu/utils/: utils.go
pkg/client/: k8s.go
pkg/exporter/: exporter.go
pkg/exporter/config/: config.go  config_handler.go
pkg/exporter/globals/: constants.go  testrunner.go
pkg/exporter/logger/: logger.go
pkg/exporter/metricsutil/: init_test.go  metrics.go  metrics_interface.go  metrics_test.go
pkg/exporter/parserutil/: options.go
pkg/exporter/proto/: Makefile  (+1 more)
pkg/k8s/: k8s.go
pkg/slurm/: slurm.go
pkg/testrunner/: agfhc.go  agfhc_test.go  cloudexportutils.go  rvs.go  rvs_test.go  testrunner.go  testrunner_test.go  utils.go  utils_test.go
pkg/tools/: tools.go
rocprofilerclient/: CMakeLists.txt  README.md  RocpCounterSampler.h  rocpclient.cpp  rocpctl.cpp
test/e2e/: .gitignore  Makefile  doc.go  exporter_test.go  interface.go  mockexporter.go  suite_test.go
test/k8s-e2e/: Makefile  doc.go  exporter_test.go  suite_test.go
test/utils/: utils.go
tools/: techsupport_dump.sh
tools/base-image/: Dockerfile  entrypoint.sh
tools/gpuagent-builderimage/: Dockerfile-u22.04  entrypoint.sh
tools/metricsclient/: main.go
tools/metricutil/: README.md  main.go  metrics_mini.txt
tools/rocprofiler-builderimage/: Dockerfile.ubuntu22  entrypoint.sh
tools/rocprofiler-libbuilder/: Dockerfile.ubuntu22  Dockerfile.ubuntu24  entrypoint.sh
tools/scripts/: copy_buildasset_gpuagent.sh
tools/smilib-builderimage/: Dockerfile.azure  Dockerfile.rhel9.4  Dockerfile.ubuntu22  Dockerfile.ubuntu24  entrypoint.sh
(+44 files in other folders)
